tests/errors/break_outside_loop_in_if.py
# expect_error: SyntaxError
if True:
    break